# demos

./: .gitignore  DIFF  README.md  autogui.py  basemap1.py  browser.py  cal.py  calendar.py  cart1.py  clock1.py  clock2.py  clock3.py  clock4.py  colors.py  colors1.py  colors2.py  ctk1.py  ctk2.py  ctk3.py  entry.py  entry2.py  eph.py  fonts.py  graph.py  hamtools.py  hello.py  hello1.py  hello2.py  hello3.py  hello4.py  hello6.py  hello_qt.py  hello_tk.py  keypress.py  menu.py  plotting_examples.py  polar.py  pong.py  ports.py  pred.py  (+26 more)
splash/: pyproject.toml  splash.py  splash2.py
