[project]
name = "demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.7",
    "proj>=0.2.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.16.0",
    "pyqt6>=6.10.0",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "tkcalendar>=1.6.1",
]
