[project]
name = "demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "ephem>=4.2",
    "matplotlib>=3.10.8",
    "proj>=0.2.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.18.0",
    "pyqt6>=6.10.2",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "skyfield>=1.54",
    "tkcalendar>=1.6.1",
]
